# macro

./: .gitignore  LICENSE  README.md  docker-compose-opensearch.yml  docker-compose.yml  flake.nix  justfile
js/app/src-tauri/: Cargo.toml  README.md  tauri.conf.json
js/app/src-tauri/src/: debug.rs  (+2 more)
rust/cloud-storage/: .dockerignore  .gitignore  CLAUDE.md  Caddyfile  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.cache  Dockerfile.convert_service  Dockerfile.prebuilt  Dockerfile.search_processing_service  Dockerfile.sha-cleanup-worker  Dockerfile.sha-ref-count-resetter  README.md  build-local.sh  ci.just  deny.toml  ensure.just  justfile  sqlx.just
rust/cloud-storage/.sqlx/: query-a6198b47dbcefc6582b70d02b4fc53980b4443badf42c79682da07e39c81f78d.json  query-d8b00829790cb1d1e0e6597d3ddd5a3d36782651b3e7786473e63fee507c7794.json
rust/cloud-storage/ai/: Cargo.toml
rust/cloud-storage/ai_format/: Cargo.toml
rust/cloud-storage/ai_tools/: Cargo.toml
rust/cloud-storage/anthropic/: Cargo.toml  README.md
rust/cloud-storage/anthropic_sdk/: Cargo.toml
rust/cloud-storage/authentication_service/: Cargo.toml  justfile
rust/cloud-storage/authentication_service_client/: Cargo.toml
rust/cloud-storage/comms_db_client/: Cargo.toml  README.md  justfile
rust/cloud-storage/comms_service/: .env.sample  Cargo.toml  README.md  justfile
rust/cloud-storage/comms_service_client/: Cargo.toml
rust/cloud-storage/connection_gateway/: .env.sample  Cargo.toml  README.md  justfile
rust/cloud-storage/contacts_db_client/: .env  Cargo.toml  justfile
rust/cloud-storage/contacts_service/: .env.sample  Cargo.toml  README.md  justfile
rust/cloud-storage/convert_service/: .env.sample  Cargo.toml  justfile
rust/cloud-storage/dataloss_prevention_handler/: .env.sample  Cargo.toml  justfile
rust/cloud-storage/delete_chat_handler/: Cargo.toml  Makefile  README.md
rust/cloud-storage/delete_document_worker/: .env.sample  Cargo.toml  justfile
rust/cloud-storage/deleted_item_poller/: .env.sample  Cargo.toml  README.md  justfile
rust/cloud-storage/document_cognition_service/: .env.sample  .gitignore  Cargo.toml  Makefile  README.md  justfile
rust/cloud-storage/document_cognition_service_client/: Cargo.toml
rust/cloud-storage/document_storage_service/: Cargo.toml  README.md  justfile
rust/cloud-storage/document_storage_service_client/: Cargo.toml
rust/cloud-storage/document_text_extractor/: .env.sample  .gitignore  Cargo.toml  README.md  build.rs  justfile  rust.json  sample_input.json  work.json
rust/cloud-storage/docx_unzip_handler/: .env.sample  .gitignore  Cargo.toml  README.md  justfile
rust/cloud-storage/dynamodb_client/: Cargo.toml
rust/cloud-storage/email/: Cargo.toml  justfile
rust/cloud-storage/email_db_client/: Cargo.toml  README.md
rust/cloud-storage/email_refresh_handler/: .env.sample  Cargo.toml  README.md  justfile
rust/cloud-storage/email_scheduled_handler/: .env.sample  Cargo.toml  README.md  justfile
rust/cloud-storage/email_service/: Cargo.toml  justfile
rust/cloud-storage/email_service_client/: Cargo.toml
rust/cloud-storage/email_suppression_handler/: .env.sample  Cargo.toml  README.md  justfile
rust/cloud-storage/email_utils/: Cargo.toml
rust/cloud-storage/email_validator/: Cargo.toml
rust/cloud-storage/ensure_exists/: Cargo.toml
rust/cloud-storage/experiment_service/: .env.sample  .gitignore  Cargo.toml  justfile
rust/cloud-storage/filter_ast/: Cargo.toml
rust/cloud-storage/frecency/: Cargo.toml  justfile
rust/cloud-storage/gmail_client/: Cargo.toml
rust/cloud-storage/insight_service/: .env.sample  .gitignore  Cargo.toml  Justfile
rust/cloud-storage/insight_service_client/: Cargo.toml  README.md
rust/cloud-storage/item_filters/: Cargo.toml
rust/cloud-storage/lambda_client/: Cargo.toml
rust/cloud-storage/lexical_client/: Cargo.toml
rust/cloud-storage/local_stream_processor/: Cargo.toml  justfile
rust/cloud-storage/macro_auth/: Cargo.toml
rust/cloud-storage/macro_autoupdate_router/: Cargo.toml
rust/cloud-storage/macro_axum_utils/: Cargo.toml
rust/cloud-storage/macro_cache_client/: Cargo.toml
rust/cloud-storage/macro_client_errors/: Cargo.toml
rust/cloud-storage/macro_cors/: Cargo.toml
rust/cloud-storage/macro_db_client/: .env  Cargo.toml  README.md  justfile
rust/cloud-storage/macro_db_migrator/: Cargo.toml
rust/cloud-storage/macro_entrypoint/: Cargo.toml
rust/cloud-storage/macro_env/: Cargo.toml
rust/cloud-storage/macro_env_var/: Cargo.toml  justfile
rust/cloud-storage/macro_middleware/: Cargo.toml
rust/cloud-storage/macro_notify/: Cargo.toml  README.md
rust/cloud-storage/macro_project_utils/: Cargo.toml
rust/cloud-storage/macro_redis/: Cargo.toml
rust/cloud-storage/macro_redis_cluster_client/: .env  Cargo.toml
rust/cloud-storage/macro_service_client/: Cargo.toml
rust/cloud-storage/macro_share_permissions/: Cargo.toml  README.md
rust/cloud-storage/macro_user_id/: Cargo.toml
rust/cloud-storage/macro_uuid/: Cargo.toml
rust/cloud-storage/mention_utils/: Cargo.toml
rust/cloud-storage/metering_db_client/: Cargo.toml  justfile
rust/cloud-storage/metering_service/: .env.sample  Cargo.toml  README.md  TESTING.md
rust/cloud-storage/metering_service_client/: Cargo.toml
rust/cloud-storage/model/: Cargo.toml
rust/cloud-storage/model-entity/: Cargo.toml
rust/cloud-storage/model-error-response/: Cargo.toml
rust/cloud-storage/model_file_type/: Cargo.toml
rust/cloud-storage/model_notifications/: Cargo.toml
rust/cloud-storage/model_user/: Cargo.toml
rust/cloud-storage/models_bulk_upload/: Cargo.toml
rust/cloud-storage/models_comms/: Cargo.toml
rust/cloud-storage/models_dcs/: Cargo.toml
rust/cloud-storage/models_email/: Cargo.toml
rust/cloud-storage/models_metering/: Cargo.toml
rust/cloud-storage/models_opensearch/: Cargo.toml
rust/cloud-storage/models_pagination/: Cargo.toml
rust/cloud-storage/models_permissions/: Cargo.toml
rust/cloud-storage/models_properties/: Cargo.toml
rust/cloud-storage/models_search/: Cargo.toml
rust/cloud-storage/models_sfs/: Cargo.toml
(+4092 files in other folders)
