[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[features]
default = []

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = { version = "2", features = ["tracing"] }
tauri-plugin-http = { git = "https://github.com/seanaye/plugins-workspace", branch = "seanaye/feat/websocket-cookies" }
nom = "8.0.0"
thiserror = "2.0.14"
tauri-plugin-opener = "2"
url = "2.5.4"
tokio = { version = "1.47.1", features = ["full"] }
tauri-plugin-deep-link = "2"
serde_qs = "0.15.0"
urlencoding = "2.1.3"
tauri-plugin-websocket = { git = "https://github.com/seanaye/plugins-workspace", branch = "seanaye/feat/websocket-cookies" }
reqwest = { version = "0.12.23", default-features = false, features = ["cookies", "rustls-tls"] }
tauri-plugin-safe-area-insets = "0.1.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
# system notifications for when the app is open
tauri-plugin-notification = "2"
# push notifications for mobile (when app is closed)
tauri-plugin-notifications = { git = "https://github.com/seanaye/tauri-plugins", branch = "seanaye+mnlphlp/add/android-notifications" }
tauri-plugin-os = "2"


[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
