[package]
edition = "2024"
name = "anthropic_sdk"
publish = false
version = "0.1.0"

[dev-dependencies]
tokio = { workspace = true }

[dependencies]
async-stream = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
schemars = { workspace = true }
secrecy = "0.10.3"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
