[package]
edition = "2024"
name = "comms_db_client"
publish = false
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
cached = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
macro_uuid = { path = "../macro_uuid" }
model = { path = "../model" }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras", "chrono", "uuid"] }
uuid = { workspace = true }

[dev-dependencies]
macro_db_migrator = { path = "../macro_db_migrator" }