[package]
default-run = "comms_service"
edition = "2024"
name = "comms_service"
publish = false
version = "0.1.0"

[[bin]]
name = "comms_service"
path = "src/main.rs"
required-features = ["channel_search", "service"]

[[bin]]
name = "backfill_search"
path = "src/bin/backfill_search.rs"
required-features = []

[features]
channel_search = []
default = ["channel_search", "service"]
local_auth = []
service = ["comms_db_client"]

[dependencies]
ai_format = { path = "../ai_format" }
anyhow = { workspace = true }
async-trait = { workspace = true }
authentication_service_client = { path = "../authentication_service_client/" }
aws-config = { workspace = true }
aws-sdk-secretsmanager = { workspace = true }
aws-sdk-sqs = { workspace = true }
axum = { workspace = true, features = ["tower-log", "ws"] }
axum-extra = { workspace = true }
axum-macros = { workspace = true }
chrono = { workspace = true }
comms_db_client = { path = "../comms_db_client", optional = true }
connection_gateway = { path = "../connection_gateway" }
document_storage_service_client = { path = "../document_storage_service_client" }
frecency = { path = "../frecency", features = ["postgres"] }
futures = { workspace = true }
http-body-util = { workspace = true }
jsonwebtoken.workspace = true
macro_auth = { path = "../macro_auth" }
macro_axum_utils = { path = "../macro_axum_utils" }
macro_cors = { path = "../macro_cors" }
macro_entrypoint = { path = "../macro_entrypoint" }
macro_env = { path = "../macro_env" }
macro_env_var = { path = "../macro_env_var" }
macro_middleware = { path = "../macro_middleware", default-features = false, features = [
  "auth",
] }
macro_notify = { path = "../macro_notify" }
macro_user_id = { path = "../macro_user_id" }
model = { path = "../model" }
model-entity = { path = "../model-entity" }
model_notifications = { path = "../model_notifications" }
models_comms = { path = "../models_comms" }
models_permissions = { path = "../models_permissions" }
reqwest.workspace = true
secretsmanager_client = { path = "../secretsmanager_client" }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
sqs_client = { path = "../sqs_client", default-features = false, features = [
  "contacts",
  "search",
] }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
uuid = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["connection_gateway"]
