[package]
edition = "2024"
name = "comms_service_client"
publish = false
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
model = { path = "../model" }
models_comms = { path = "../models_comms" }
reqwest.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true }
