[package]
edition = "2024"
name = "convert_service"
publish = false
version = "0.1.0"

[features]
disable_cleanup = []
disable_worker = []
local_queue = []

[dependencies]
anyhow = { workspace = true }
aws-config = { workspace = true }
aws-sdk-lambda = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-secretsmanager = { workspace = true }
aws-sdk-sqs = { workspace = true }
axum = { workspace = true }
futures = { workspace = true }
http-body-util = { workspace = true }
lambda_client = { path = "../lambda_client" }
macro_cors = { path = "../macro_cors" }
macro_db_client = { path = "../macro_db_client" }
macro_entrypoint = { path = "../macro_entrypoint" }
macro_env = { path = "../macro_env" }
macro_middleware = { path = "../macro_middleware", default-features = false, features = [
  "auth",
] }
macro_uuid = { path = "../macro_uuid" }
model = { path = "../model" }
nix = { version = "0.29.0", features = ["process", "signal"] }
remote_env_var = { path = "../remote_env_var" }
rs-libreoffice-bindings = "0.0.7"
s3_client = { path = "../s3_client" }
secretsmanager_client = { path = "../secretsmanager_client" }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
sqs_client = { path = "../sqs_client" }
sqs_worker = { path = "../sqs_worker" }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
zip = { workspace = true, features = ["bzip2"] }
