[package]
edition = "2024"
name = "delete_document_worker"
publish = false
version = "0.1.0"


[features]
local_queue = []

[dependencies]
anyhow = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-secretsmanager = { workspace = true }
aws-sdk-sqs = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
comms_service_client = { path = "../comms_service_client" }
futures = { workspace = true }
macro_cors = { path = "../macro_cors" }
macro_db_client = { path = "../macro_db_client" }
macro_entrypoint = { path = "../macro_entrypoint" }
macro_env = { path = "../macro_env" }
macro_redis_cluster_client = { path = "../macro_redis_cluster_client" }
model = { path = "../model" }
openssl = { workspace = true }
properties_service_client = { path = "../properties_service_client" }
redis = { workspace = true, features = [
  "aio",
  "cluster-async",
  "tokio-native-tls-comp",
] }
s3_client = { path = "../s3_client" }
secretsmanager_client = { path = "../secretsmanager_client" }
serde = { workspace = true }
sqlx = { workspace = true }
sqs_worker = { path = "../sqs_worker" }
sync_service_client = { path = "../sync_service_client" }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["openssl"]
