[package]
edition = "2024"
name = "deleted_item_poller"
publish = false
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
aws-config = { workspace = true }
aws-sdk-sqs = { workspace = true }
aws-smithy-types = { workspace = true }
aws_lambda_events = { workspace = true, features = ["eventbridge"] }
chrono = { workspace = true }
futures = { workspace = true }
lambda_runtime = { workspace = true }
macro_db_client = { path = "../macro_db_client" }
macro_entrypoint = { path = "../macro_entrypoint" }
macro_env = { path = "../macro_env" }
macro_uuid = { path = "../macro_uuid" }
model = { path = "../model" }
openssl = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
sqs_client = { path = "../sqs_client", default-features = false, features = [
  "chat",
  "document",
  "search",
] }
tokio = { workspace = true }
urlencoding = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["openssl"]
