[package]
default-run = "document_cognition_service"
edition = "2024"
name = "document_cognition_service"
publish = false
version = "0.1.0"

[[bin]]
name = "document_cognition_service"
path = "src/main.rs"

[[bin]]
name = "backfill_search"
path = "src/bin/backfill_search.rs"

[features]
local = []
local_queue = []


[dependencies]
aho-corasick = "1.1.3"
ai = { path = "../ai" }
ai_tools = { path = "../ai_tools" }
anyhow = { workspace = true }
async-openai = { workspace = true }
aws-config = { workspace = true }
aws-sdk-secretsmanager = { workspace = true }
aws-sdk-sqs = { workspace = true }
axum = { workspace = true, features = ["tower-log", "ws"] }
base64 = { workspace = true }
chrono = { workspace = true }
comms_service_client = { path = "../comms_service_client" }
connection_gateway = { path = "../connection_gateway" }
cookie = { workspace = true }
dashmap = { workspace = true }
document_cognition_service_client = { path = "../document_cognition_service_client" }
document_storage_service_client = { path = "../document_storage_service_client" }
email_service_client = { path = "../email_service_client" }
futures = { workspace = true }
http-body-util = { workspace = true }
insight_service_client = { path = "../insight_service_client" }
lazy_static = { workspace = true }
lexical_client = { path = "../lexical_client" }
log = { workspace = true }
macro_auth = { path = "../macro_auth" }
macro_cors = { path = "../macro_cors" }
macro_db_client = { path = "../macro_db_client" }
macro_entrypoint = { path = "../macro_entrypoint" }
macro_env = { path = "../macro_env" }
macro_middleware = { path = "../macro_middleware", default-features = false, features = [
  "auth",
  "cloud_storage",
  "user_permissions",
] }
macro_notify = { path = "../macro_notify" }
macro_project_utils = { path = "../macro_project_utils" }
macro_share_permissions = { path = "../macro_share_permissions" }
macro_uuid = { path = "../macro_uuid" }
metering_service_client = { path = "../metering_service_client" }
model = { path = "../model" }
models_dcs = { path = "../models_dcs" }
models_permissions = { path = "../models_permissions" }
regex = { workspace = true }
reqwest.workspace = true
schemars = { workspace = true }
scribe = { path = "../scribe", features = [
  "channel",
  "dcs",
  "document",
  "email",
  "static_file",
] }
search_service_client = { path = "../search_service_client" }
secretsmanager_client = { path = "../secretsmanager_client" }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
sqs_client = { path = "../sqs_client", default-features = false, features = [
  "chat",
  "document_text_extractor",
  "search",
] }
static_file_service_client = { path = "../static_file_service_client" }
strum = { workspace = true }
sync_service_client = { path = "../sync_service_client" }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true, features = ["limit", "timeout"] }
tracing = { workspace = true }
unfurl_service = { path = "../unfurl_service" }
utoipa = { workspace = true, features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
uuid = { workspace = true }
macro_user_id = { path = "../macro_user_id" }

[dev-dependencies]
macro_auth = { path = "../macro_auth", features = ["testing"] }
