[package]
edition = "2024"
exclude = ["fixtures/", "migrations/", "tests/"]
name = "docx_unzip_handler"
publish = false
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
aws-config = { workspace = true }
aws-sdk-lambda = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-sqs = { workspace = true }
aws-smithy-types = { workspace = true }
aws_lambda_events = { workspace = true, features = ["s3"] }
bzip2 = { workspace = true, default-features = false, features = [
  "libbz2-rs-sys",
] }
futures = { workspace = true }
lambda_client = { path = "../lambda_client" }
lambda_runtime = { workspace = true }
macro_db_client = { path = "../macro_db_client" }
macro_entrypoint = { path = "../macro_entrypoint" }
macro_env = { path = "../macro_env" }
macro_redis_cluster_client = { path = "../macro_redis_cluster_client" }
macro_uuid = { path = "../macro_uuid" }
model = { path = "../model" }
openssl = { workspace = true }
redis = { workspace = true, features = [
  "aio",
  "cluster-async",
  "tokio-native-tls-comp",
] }
s3_client = { path = "../s3_client" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
sqs_client = { path = "../sqs_client" }
tokio = { workspace = true }
urlencoding = { workspace = true }
zip = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["openssl"]
