[package]
edition = "2024"
name = "dynamodb_client"
publish = false
version = "0.1.0"

[features]
local = []

[dependencies]
anyhow = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
chrono = { workspace = true }
model = { path = "../model" }
models_bulk_upload = { path = "../models_bulk_upload" }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }
