[package]
edition = "2024"
name = "email"
publish = false
version = "0.1.0"

[features]
ai_schema = ["dep:schemars"]
axum = [
  "dep:axum",
  "dep:model-error-response",
  "dep:model_user",
  "dep:utoipa",
  "model_user/axum",
  "models_pagination/axum",
]
inbound = ["ports"]
outbound = ["dep:sqlx", "ports"]
ports = ["dep:tokio", "frecency/ports"]

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, optional = true }
chrono = { workspace = true, features = ["serde"] }
doppleganger = { workspace = true, features = ["chrono", "uuid"] }
frecency = { path = "../frecency" }
macro_user_id = { path = "../macro_user_id" }
model-entity = { path = "../model-entity" }
model-error-response = { path = "../model-error-response", optional = true }
model_user = { path = "../model_user", optional = true }
models_pagination = { path = "../models_pagination" }
schemars = { workspace = true, optional = true, features = ["uuid1"] }
serde = { workspace = true }
serde_with = { workspace = true }
sqlx = { workspace = true, optional = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros"], optional = true }
tracing = { workspace = true }
utoipa = { workspace = true, optional = true }
uuid = { workspace = true }

[dev-dependencies]
macro_db_migrator = { path = "../macro_db_migrator"}
serde_json = { workspace = true }
